[gd_scene load_steps=10 format=3 uid="uid://buap6q65s4wx8"]

[ext_resource type="Script" path="res://gameplay2.gd" id="1_e8ff8"]
[ext_resource type="Texture2D" uid="uid://crs3fmw256n73" path="res://chest noir.png" id="2_4llui"]
[ext_resource type="PackedScene" uid="uid://bohl0xrr0fqbb" path="res://enigme 1/enigme 2.tscn" id="6_bd1lr"]
[ext_resource type="Texture2D" uid="uid://gvs0ak8c053o" path="res://chest blue.png" id="6_y8b2t"]
[ext_resource type="PackedScene" uid="uid://8qsb3bu6wh1w" path="res://enigme 1/enigme 2.2.tscn" id="7_4w7ja"]
[ext_resource type="PackedScene" uid="uid://b02dh7pmfqy3v" path="res://user_interface.tscn" id="8_1s5rp"]
[ext_resource type="PackedScene" uid="uid://mr0dh1hf2apj" path="res://enigme 1/enigme 2.3.tscn" id="8_y8x4l"]
[ext_resource type="PackedScene" uid="uid://18h0yj867rbd" path="res://enigme 1/enigme 2.4.tscn" id="9_415nr"]
[ext_resource type="Script" path="res://user_interface2.gd" id="9_dwowe"]

[node name="Node2D" type="Node2D"]
position = Vector2(-1426, -1618)
script = ExtResource("1_e8ff8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(93, 995)
zoom = Vector2(0.3, 0.3)

[node name="Button" type="Button" parent="."]
offset_left = -189.0
offset_top = 1385.0
offset_right = 354.0
offset_bottom = 1703.0

[node name="Sprite2D" type="Sprite2D" parent="Button"]
texture_filter = 1
position = Vector2(264.967, 78.8281)
scale = Vector2(13.5613, 8.73906)
texture = ExtResource("2_4llui")

[node name="Button2" type="Button" parent="."]
offset_left = -1291.0
offset_top = 666.0
offset_right = -748.0
offset_bottom = 984.0

[node name="Sprite2D" type="Sprite2D" parent="Button2"]
texture_filter = 1
position = Vector2(252.967, 106.172)
scale = Vector2(15.4813, 8.23906)
texture = ExtResource("6_y8b2t")

[node name="Button3" type="Button" parent="."]
offset_left = -129.0
offset_top = 660.0
offset_right = 414.0
offset_bottom = 978.0

[node name="Sprite2D" type="Sprite2D" parent="Button3"]
texture_filter = 1
position = Vector2(288.967, 85.1719)
scale = Vector2(14.0413, 9.73906)
texture = ExtResource("6_y8b2t")

[node name="Button4" type="Button" parent="."]
offset_left = -1400.0
offset_top = 1391.0
offset_right = -689.0
offset_bottom = 1757.0

[node name="Sprite2D" type="Sprite2D" parent="Button4"]
texture_filter = 1
position = Vector2(364, 129)
scale = Vector2(16.08, 8.83333)
texture = ExtResource("2_4llui")

[node name="UserInterface" parent="." instance=ExtResource("8_1s5rp")]
script = ExtResource("9_dwowe")

[node name="TutorialMessageBox" parent="." instance=ExtResource("6_bd1lr")]
offset_left = -1572.0
offset_top = 234.0
offset_right = -1543.0
offset_bottom = 234.0

[node name="TutorialMessageBox2" parent="." instance=ExtResource("7_4w7ja")]
offset_left = -321.0
offset_top = 222.0
offset_right = -321.0
offset_bottom = 222.0

[node name="TutorialMessageBox3" parent="." instance=ExtResource("8_y8x4l")]
offset_left = -1600.0
offset_top = 1003.0
offset_right = -1600.0
offset_bottom = 1003.0

[node name="TutorialMessageBox4" parent="." instance=ExtResource("9_415nr")]
offset_left = -423.0
offset_top = 1009.0
offset_right = -423.0
offset_bottom = 1009.0

[connection signal="pressed" from="Button" to="UserInterface" method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="UserInterface" method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="UserInterface" method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
